correção_de_gramáticas
! COMANDO ESCREVA
<write_cmd>        ::= escreva '(' <write_value> <write_value_list> ')' ';'
<write_value_list> ::= ',' <write_value> <write_value_list> |
<write_value>      ::= id <write_value_1> | number | cad | char
<write_value_1>    ::= <v_m_access> | <elem_registro> |

! COMANDO LEIA
<read_cmd>        ::= leia '(' <read_value> <read_value_list> ')' ';'
<read_value_list> ::= ',' <read_value> <read_value_list> |
<read_value>      ::= id <read_value_1>
<read_value_1>    ::= <v_m_access> | <elem_registro> |


! ATRIBUIÇOES DE VARIAVEIS
<var_atr>   ::= id <var_atr_1> 
<var_atr_1> ::= <atr> | <v_m_access> <atr> | <elem_registro> <atr>
<atr>       ::= '=' <atr_1>
<atr_1>     ::= number <atr_2> | boolean <atr_2> | cad <atr_2> | char <atr_2> | <expr> <atr_2> | id <functionCall>
<atr_2>     ::= ',' <var_atr> | ';'

! CORPO DE COMANDO

<com_body>      ::= <com_enquanto> <com_body> | <com_para> <com_body> | <se> <com_body> | <write_cmd> <com_body> | <read_cmd> <com_body> | <com_body_1> <com_body> | <com_retornar>                       
<com_retornar>  ::= retorno <com_retornar1> ';' | <>
<com_retornar1> ::= <value_with_expressao> | <>

! CHAMADA DE FUNCAO

<functionCall> ::= '(' <varList0>
<varList0>     ::= <value_without_IDE> <varList2> | id <varList1> | <varList2>
<varList1>     ::= <varList2>     | <v_m_access> <varList2> | <elem_registro> <varList2>
<varList2>     ::= ',' <varList0> | ')' ';'
